@@ -1,5 +1,9 @@
 2008-03-09 Borut Razem <borut.razem AT siol.net>
 
+	* index.php: added News - sdcc 2.7.0 RC2
+
+2008-03-09 Borut Razem <borut.razem AT siol.net>
+
 	* index.php: added News - sdcc 2.7.0 RC1
 	* previous.php: previous news moved from index.php
 
